--- a/index.html
+++ b/index.html
@@ -52,8 +52,20 @@
 
   <main class="main">
     <div class="main-box">
-      <div class="sidebar">サイドバー</div>
-      <div class="content">コンテンツ</div>
+      <div class="sidebar">
+        <nav class="sidebar-nav">
+          <ul class="sidebar-ul">
+              <li class="sidebar-li"><a class="sidebar-a" href="#">ABOUT</a></li>
+              <li class="sidebar-li"><a class="sidebar-a" href="#">SERVICE</a></li>
+              <li class="sidebar-li"><a class="sidebar-a" href="#">COMPANY</a></li>
+              <li class="sidebar-li"><a class="sidebar-a" href="#">CONTACT</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="content">
+        コンテンツ
+      </div>
     </div>
   </main>
 
