--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
       </div>
 
       <div class="content">
-        コンテンツ
+        <div class="content-box">
+          コンテンツ
+        </div>
       </div>
     </div>
   </main>
