--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
               <li class="sidebar-li"><a class="sidebar-a" href="#">COMPANY</a></li>
               <li class="sidebar-li"><a class="sidebar-a" href="#">CONTACT</a></li>
               <li class="sidebar-li"><a class="sidebar-a" href="#">CONTACT</a></li>
+              <li class="sidebar-li"><a class="sidebar-a" href="#">CONTACT</a></li>
           </ul>
         </nav>
       </div>
