--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <div class="content">
         <div class="content-box">
-          コンテンツ
+          メインコンテンツ
         </div>
       </div>
     </div>
